# ivao_tracker

./: .dockerignore  .gitignore  404.html  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  config.toml  index.html  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt
.github/: rename_project.sh
.github/backup/: requirements-test.txt  requirements.txt  setup.py
.github/workflows/: main.yml  pages.yml  release.yml  renovate.yml
docker/: Dockerfile  docker-compose.yml  index.html
docker/conf/: config.toml  pg_hba.conf  postgresql.conf
docs/: docker.md  index.md  makefile.md  sql.md
ivao_tracker/: __main__.py  base.py  cli.py  config_loader.py  model.py  sql.py
ivao_tracker/config/: loader.py  logging.py
ivao_tracker/logger/: config.py
ivao_tracker/model/: constants.py  json.py  sql.py
ivao_tracker/service/: airport.py  ivao.py  sql.py
ivao_tracker/util/: constants.py  model.py  modeltransformer.py
makefile/: index.html
search/: search_index.json
sql/: index.html
tests/: test_base.py  test_core.py
tests/mock_data/: snapshot.json
