[project]
name = "ivao_tracker"
version = "0.1.0"
description = "tracking ivao data"
authors = [
    {name = "buehner"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "msgspec (==0.18.6)",
    "setuptools (==69.1.0)",
    "geoalchemy2 (==0.14.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ivao_tracker = 'ivao_tracker.__main__:main'

[tool.poetry.group.dev.dependencies]
pytest = "8.0.1"
coverage = "7.4.4"
flake8 = "7.0.0"
black = "24.4.0"
isort = "5.13.2"
pytest-cov = "4.1.0"
mypy = "1.9.0"
gitchangelog = "3.0.4"
mkdocs = "1.5.3"
mkdocs-material = "9.5.18"
