[project]
name = "ivao_tracker"
version = "0.1.0"
description = "tracking ivao data"
authors = [
    {name = "buehner"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geoalchemy2 (==0.17.1)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "msgspec (>=0.19.0,<0.20.0)",
    "setuptools (>=75.8.0,<76.0.0)"
]

[project.scripts]
ivao_tracker = 'ivao_tracker.__main__:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
coverage = "7.6.12"
flake8 = "7.1.2"
black = "25.1.0"
isort = "6.0.1"
pytest-cov = "6.0.0"
mypy = "1.15.0"
gitchangelog = "3.0.4"
mkdocs = "1.6.1"
mkdocs-material = "9.6.7"
